[package]
name = "reader"
version = "0.1.0"
description = "A Reader App"
authors = ["hectorqin"]
license = "GPL-3.0"
repository = "https://github.com/hectorqin/reader"
default-run = "reader"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
which = "4.2.2"
anyhow = "1.0"
dirs = "4.0.0"
dunce = "1.0.2"
open = "2.1.1"
log = "0.4.14"
log4rs = "1.0.0"
chrono = "0.4.19"
serde_json = "1.0"
serde_yaml = "0.8"
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["clipboard-all", "dialog-all", "global-shortcut-all", "http-all", "process-all", "shell-all", "updater", "window-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
reader-dev = []
